src/snapshots/pybustools__butterfly__testing__insta_make_ecs.snap
---
source: src/butterfly.rs
expression: cu.0.get_histogram()
---
1: 7343024
2: 1315459
3: 253620
4: 49663
5: 9737
6: 1973
7: 401
8: 100
9: 20
10: 13
11: 11
12: 4
13: 3
14: 8
15: 11
16: 4
17: 2
18: 2
19: 1
20: 2
21: 1
22: 2
23: 2
24: 1
25: 1
26: 2
37: 1
41: 1
43: 1
45: 1
46: 1
47: 1
53: 1
55: 1
72: 1
73: 1
168: 1
