src/snapshots/pybustools__butterfly__testing__insta_make_ecs_ec-2.snap
---
source: src/butterfly.rs
expression: cu_incon.0.get_histogram()
---
2: 9513
3: 3190
4: 880
5: 247
6: 60
7: 15
8: 5
9: 1
10: 5
11: 1
14: 3
15: 1
16: 1
18: 1
19: 1
40: 1
49: 1
82: 1
88: 1
188: 1
