src/snapshots/pybustools__butterfly__testing__insta_make_ecs_ec-6.snap
---
source: src/butterfly.rs
expression: cu_multi.0.get_histogram()
---
1: 6133819
2: 1367178
3: 310416
4: 69622
5: 15213
6: 3338
7: 681
8: 162
9: 33
10: 5
12: 1
13: 1
14: 1
15: 1
